src/styles/global.css
/* ... */
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
ul,
ol,
dl,
figure {
  margin-top: 10px;
  margin-bottom: 10px;
}

strong,
b {
  font-weight: 700;
  color: #0d122b;
}

hr {
  border-bottom: 0;
  border-style: solid;
  border-color: #ececec;
}

kbd {
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border: 1px solid #ececec;
  border-radius: 2px;
  color: #0d122b;
  display: inline-block;
  font-size: 14px;
  line-height: 1.4;
  font-family: Consolas, monospace;
  margin: 0 0.1em;
  font-weight: 700;
  padding: 0.01em 0.4em;
  text-shadow: 0 1px 0 #fff;
}

img {
  max-width: 100%;
  vertical-align: middle;
  -webkit-user-drag: none;
  margin: 0 auto;
  text-align: center;
}

figure {
  position: relative;
}

figure > img {
  display: block;
  position: relative;
}

figcaption {
  font-size: 13px;
  text-align: center;
}

ul {
  list-style: none;
}
ul li {
  display: list-item;
  text-align: -webkit-match-parent;
}
ul li::before {
  content: "﹣";
  display: inline-block;
  top: -1px;
  width: 1.2em;
  position: relative;
  margin-left: -1.3em;
  font-weight: 700;
}

ol {
  list-style: none;
  counter-reset: li;
}
ol li {
  position: relative;
  counter-increment: li;
}
ol li::before {
  content: counter(li);
  display: inline-block;
  width: 1em;
  margin-right: 0.5em;
  margin-left: -1.6em;
  text-align: right;
  direction: rtl;
  font-weight: 700;
  font-size: 14px;
}

ul,
ol {
  margin-top: 0;
  margin-left: 30px;
}

li {
  padding-bottom: 1px;
  padding-top: 1px;
}
li:before {
  color: #0d122b;
}
li > ul,
li > ol {
  margin-bottom: 2px;
  margin-top: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #0d122b;
  font-weight: 700;
}
h1 + ul, h1 + ol,
h2 + ul,
h2 + ol,
h3 + ul,
h3 + ol,
h4 + ul,
h4 + ol,
h5 + ul,
h5 + ol,
h6 + ul,
h6 + ol {
  margin-top: 10px;
}
@media screen and (max-width: 768px) {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    scroll-margin-top: 65px;
  }
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  text-decoration: none;
  border: none;
}
h1 > a:hover,
h2 > a:hover,
h3 > a:hover,
h4 > a:hover,
h5 > a:hover,
h6 > a:hover {
  text-decoration: none;
  border: none;
}

a {
  color: inherit;
  text-decoration-color: #d2c7c7;
}
a:hover {
  color: #003fff;
}

del {
  color: inherit;
}

em {
  color: inherit;
}

blockquote {
  color: #6b7886;
  font-style: normal;
  text-align: left;
  border: none;
  border-left: 2px solid #d2c7c7;
  background: none;
  padding: 2px 0 2px 20px;
  margin-left: 0;
  margin-right: 0;
  font-size: 0.92em;
  line-height: 1.8;
}
blockquote > :last-child {
  margin-bottom: 0;
  margin-top: 0;
}

.wrapper {
  max-width: -webkit-calc(780px - (30px * 2));
  max-width: calc(780px - 30px * 2);
  position: relative;
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}
@media screen and (max-width: 768px) {
  .wrapper {
    max-width: -webkit-calc(780px - (30px));
    max-width: calc(780px - (30px));
    padding-right: 20px;
    padding-left: 20px;
  }
  .wrapper.blurry {
    animation: 0.2s ease-in forwards blur;
    -webkit-animation: 0.2s ease-in forwards blur;
  }
}

u {
  text-decoration-color: #d2c7c7;
}

small {
  font-size: 14px;
}

sup {
  border-radius: 10%;
  top: -3px;
  left: 2px;
  font-size: small;
  position: relative;
  margin-right: 2px;
}

.overflow-table {
  overflow-x: auto;
}

table {
  width: 100%;
  margin-top: 15px;
  border-collapse: collapse;
  font-size: 14px;
}
table thead {
  font-weight: 700;
  color: #0d122b;
  border-bottom: 1px solid #ececec;
}
table th,
table td,
table tr {
  border: 1px solid #ececec;
  padding: 2px 7px;
}

.post-item:after, .navbar:after, .wrapper:after {
  content: "";
  display: table;
  clear: both;
}

mark,
::selection {
  background: #fffba0;
  color: #0d122b;
}

.gist table {
  border: 0;
}
.gist table tr,
.gist table td {
  border: 0;
}

.navbar {
  height: auto;
  max-width: calc(780px - 30px * 2);
  max-width: -webkit-calc(780px - (30px * 2));
  position: relative;
  margin-right: auto;
  margin-left: auto;
  border-bottom: none;
  padding: 15px 30px;
}

.background {
  display: none;
}

.menu {
  user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
}
.menu a#mode {
  float: left;
  left: 8px;
  top: 6px;
  position: relative;
  clear: both;
  -webkit-transform: scale(1, 1);
  transform: scale(1, 1);
  opacity: 0.7;
  z-index: 1;
}
.menu a#mode:hover {
  cursor: pointer;
  opacity: 0.85;
  color: inherit;
}
.menu a#mode:active {
  -webkit-transform: scale(0.9, 0.9);
  transform: scale(0.9, 0.9);
}
.menu a#mode .mode-moon {
  display: block;
}
.menu a#mode .mode-moon line {
  stroke: #0d122b;
  fill: none;
}
.menu a#mode .mode-moon circle {
  fill: #0d122b;
  stroke: #0d122b;
}
.menu a#mode .mode-sunny {
  display: none;
}
.menu a#mode .mode-sunny line {
  stroke: #eaeaea;
  fill: none;
}
.menu a#mode .mode-sunny circle {
  fill: none;
  stroke: #eaeaea;
}
.menu .trigger {
  float: right;
}
.menu .menu-trigger {
  display: none;
}
.menu .menu-icon {
  display: none;
}
.menu .menu-link {
  color: #0d122b;
  line-height: 2.25;
  text-decoration: none;
  padding: 5px 8px;
  opacity: 0.7;
  letter-spacing: 0.3px;
}
.menu .menu-link:hover {
  opacity: 1;
}
.menu .menu-link:not(:last-child) {
  margin-right: 5px;
}
.menu .menu-link.rss {
  position: relative;
  bottom: -3px;
  outline: none;
}
@media screen and (max-width: 768px) {
  .menu .menu-link {
    opacity: 0.8;
  }
}
.menu .menu-link.active {
  opacity: 1;
  font-weight: 600;
}
/* ... */

